--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=0367
 spring.jpa.database=default
 
 server.port=8091
-server.servlet.context-path=/user-service
+server.servlet.context-path=/master
 #server.error.whitelabel.enabled = false
 #spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
