--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.jsw.user_service</groupId>
+	<groupId>com.jsw.mdm_service</groupId>
 	<artifactId>master-data-management</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MDM</name>
