--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/Jsw
+spring.datasource.url=jdbc:postgresql://localhost:5432/jsw
 spring.datasource.username=postgres
-spring.datasource.password=0367
+spring.datasource.password=admin
 spring.jpa.database=default
 
 server.port=8091
