--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/jsw
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=0367
 spring.jpa.database=default
 
 server.port=8091
