--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.jpa.database=default
 server.port=8091
 server.servlet.context-path=/master
 
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
 #server.error.whitelabel.enabled = false
 #spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
