--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+
 #server.error.whitelabel.enabled = false
 #spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
